--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=aristosconfirmationemail@gmail.com
+spring.mail.password=betx nzyf lfbt ibhm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
