--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/progi
-spring.datasource.username=postgres
-spring.datasource.password=bazepodataka
+spring.datasource.url=jdbc:postgresql://dpg-clae49pm6hds73ehlbf0-a.frankfurt-postgres.render.com:5432/wildtrack
+spring.datasource.username=wildtrack_user
+spring.datasource.password=u4RfMxGnEdO4SgksWpMkK4QgMWajyCEh
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
