--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${PORT:8080}
+
 spring.datasource.url=jdbc:postgresql://dpg-clae49pm6hds73ehlbf0-a.frankfurt-postgres.render.com:5432/wildtrack
 spring.datasource.username=wildtrack_user
 spring.datasource.password=u4RfMxGnEdO4SgksWpMkK4QgMWajyCEh
