--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -21,7 +21,7 @@
     "build": "yarn install && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-prod": "node index.js"
+    "start-prod": "node app.js"
   },
   "engines": {
     "node": ">=18.18.0 <19.0.0"
