--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "franjo",
   "version": "0.1.0",
-  "proxy": "https://aristos.onrender.com",
+  "proxy": "http://localhost:8080/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
