--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -24,13 +24,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "yarn install && react-scripts build",
+    "build": "react-scripts build",
     "start-prod": "node app.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": ">=18.18.0 <19.0.0"
+    "node": ">=18.18.0"
   },
   "eslintConfig": {
     "extends": [
