--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -25,8 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "setup-env": "node app.js",
-    "start-prod": "npm run setup-env",
+    "start-prod": "node app.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
