--- a/IzvorniKod/frontend/package.json
+++ b/IzvorniKod/frontend/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "yarn install && react-scripts build",
+    "build": "react-scripts build",
     "start-prod": "node app.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
